// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="header"
>
  <h1>
    Palette Picker
  </h1>
  <NavLink
    to="/home/"
  >
    <span>
      something
    </span>
     SIGN OUT
  </NavLink>
</header>
`;

exports[`Header should match snapshot for no username 1`] = `
<header
  className="header"
>
  <h1>
    Palette Picker
  </h1>
  <NavLink
    to="/home/login"
  >
    LOGIN
  </NavLink>
</header>
`;
